Admin REST - another part of cleanups
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>